# khs-python-example

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
airflow/: README.md
airflow/dags/: bigquery_pipeline.py  etl_basic.py  postgres_to_bq_orders.py
app/: db.py  main.py  models.py
app/clients/: __init__.py  datadog.py
app/controllers/: __init__.py
app/middleware/: __init__.py  metrics.py
app/models/: __init__.py  common.py  items.py  orders.py
app/routers/: demo.py  items.py  orders.py  streaming.py
app/services/: __init__.py  items.py  orders.py
infra/: README.md  bigquery.tf  cloudsql.tf  main.tf  terraform.tfvars.example
tests/: conftest.py  test_demo_api.py  test_items_api.py  test_metrics.py  test_orders_api.py  test_orders_integration.py  test_storage.py  test_streaming_api.py
